Another massive update, the second Fixed styling of various elements Replaced Font Awesome and some SVG with IcoMoon web font Fixed user experience issues on mobile Fixed rating Added rudimentary comments system Warning: rating system may still have a bug

--- a/assets/css/results-area.css
+++ b/assets/css/results-area.css
@@ -29,6 +29,7 @@
 
 .select-chip input.select-dropdown {
     width: 82%;
+    height: 100%;
     border: none;
     margin: 0;
     margin-left: 0.5rem;
@@ -132,6 +133,9 @@
      display: grid;
      grid-template-columns: repeat(6, 1fr);
      grid-auto-rows: 1fr;
+     grid-row-gap: 0.5rem;
+     grid-column-gap: 0.2rem;
+     font-size: 2rem;
      text-align: center;
      padding: 0 0.5rem;
 }
@@ -148,4 +152,15 @@
     border: solid #aaa 1px;
     height: 80%;
     background-color: #aaa;
+}
+@media only screen and (max-width: 992px) {
+    .result-item-section-amenities {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .result-item-section-amenities {
+        grid-template-columns: 1fr 1fr;
+    }
 }
